--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
-    <script src="curves.js"></script>
+    <script src="bezier.js"></script>
 </head>
 
 <body>
     <main>
+
+        <body style="background-color:#000000">
     </main>
 </body>
 
