--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
     <script src="bezier.js"></script>
+
+    <style type="text/css">
+        .credits {
+            position: absolute;
+            text-align: left;
+            bottom: 8px;
+            width: 100%;
+            color: #FFFFFF;
+            font-family: monospace;
+            margin-left: 12px;
+            font-size: 12px
+        }
+    </style>
 </head>
 
 <body>
@@ -11,6 +24,9 @@
 
         <body style="background-color:#000000">
     </main>
+    <div class="credits">
+        credits:<br>@rafpinter; p5.js; bezier;
+    </div>
 </body>
 
 </html>
