removing ; from credts

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <body style="background-color:#000000">
     </main>
     <div class="credits">
-        credits:<br>@rafpinter; p5.js; bezier;
+        credits:<br>@rafpinter; p5.js; bezier
     </div>
 </body>
 
